# packages/eps/api/openapi/eps-licence.yaml
@@ -141,6 +141,41 @@ paths:
   ################################################################################################
   # Applications
   ################################################################################################
+  '/user/{userId}/applications':
+    get:
+      description: Get the (unsubmitted) applications for a user
+      summary: Get the (unsubmitted) applications for a user
+      operationId: getApplicationsByUserId
+      parameters:
+        - name: userId
+          in: path
+          description: ID of the user
+          required: true
+          schema:
+            $ref: '#/components/schemas/uuid'
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/applications'
+        400:
+          description: Bad request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
+        404:
+          description: Not found
+        500:
+          description: Unexpected error on server
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
+
+
   '/user/{userId}/application':
     post:
       description: Create a new application
