# packages/eps/api/src/server.js
@@ -2,7 +2,10 @@ import Hapi from '@hapi/hapi'
 import Inert from '@hapi/inert'
 import { SERVER_PORT } from './constants.js'
 import { getUserByUserId, putUser, deleteUser, postUser } from './handlers/user/user.js'
-import { getApplicationByApplicationId, postApplication, putApplication, deleteApplication } from './handlers/application/application.js'
+import {
+  getApplicationByApplicationId, getApplicationsByUserId,
+  postApplication, putApplication, deleteApplication
+} from './handlers/application/application.js'
 
 import validationFail from './handlers/validation-fail.js'
 import notFound from './handlers/not-found.js'
@@ -36,6 +39,7 @@ const init = async server => {
     putUser,
     deleteUser,
     getApplicationByApplicationId,
+    getApplicationsByUserId,
     postApplication,
     putApplication,
     deleteApplication,
